# Commercial-Demand-ChatGPT

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/parameters/: phase1_demand_parameters.toml  phase2_deterministic_cascade.toml  phase3_trade_layer.toml  phase4_production_schedule.toml  phase5_inventory_layer.toml  phase6_financial_layer.toml  real_scenario_01.toml
config/scenarios/: base_phase1.toml  base_phase2.toml  base_phase3.toml  base_phase4.toml  base_phase5.toml  (+4 more)
scripts/: assumptions_import.py  build_real_scenario_01.py  generate_commercial_forecast_template.py  generate_model_assumptions_template.py  import_commercial_forecast_workbook.py  run_forecast_workflow.py  run_phase1.py  run_phase2.py  run_phase3.py  run_phase4.py  run_phase5.py  run_phase6.py
templates/: CBX250_Commercial_Forecast_Template.xlsx  CBX250_Model_Assumptions_Template.xlsx  README.md
tests/: _phase1_acceptance_support.py  _phase2_support.py  _phase3_support.py  _phase4_support.py  _phase5_support.py  _phase6_support.py  _workbook_test_support.py  conftest.py  test_assumptions_import.py  test_assumptions_template.py  test_calendar.py  test_dimensions.py  test_excel_import.py  test_excel_template.py  test_forecast_workflow.py  test_phase1_acceptance.py  test_phase1_runner.py  test_phase2_acceptance.py  test_phase2_runner.py  test_phase3_acceptance.py  test_phase3_runner.py  test_phase4_acceptance.py  test_phase4_runner.py  test_phase5_acceptance.py  test_phase5_runner.py  test_phase6_acceptance.py  test_phase6_runner.py  test_raw_ingest.py  test_validation.py
(+114 files in other folders)
